--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  <h2>Reynaldo Kelly</h2>
  <br>
  <img src="Reynaldo.jpg" width="300" height="400">
- <p>My name is Reynaldo , I'm 23 year's old and  i attend the university of the west indies , i'm currently pursueing a degree in information technology.
+ <p>My name is Reynaldo , I'm 23 year's old and  i attend the university of the west indies , i'm currently pursuing a degree in information technology.
  My hobbies are playing sports and watching it , my favorite sport is football. I'm interested in web development because i know it will help to develop my web skills 
  and teach me to do more than create websites and broaden my prospective on the whole web</p>
  
  </main>
  <footer>
- <p>Copyright &copy; 2020 <Reynaldo Kelly>.</p>
+ <p>Copyright &copy; 2020 Reynaldo Kelly.</p>
  </footer>
 </body>
 </html>
